[gd_scene load_steps=12 format=3 uid="uid://b7huf0srkra04"]

[ext_resource type="Script" path="res://levels/world.gd" id="1_u7smd"]
[ext_resource type="PackedScene" uid="uid://bfbbc1lm3doy7" path="res://game_objects/audio/ambient_note_player.tscn" id="2_573sm"]
[ext_resource type="Texture2D" uid="uid://dvobjuqmsimxc" path="res://parallaxes/Ocean_1/1.png" id="3_ntxxk"]
[ext_resource type="Script" path="res://game_objects/camera.gd" id="4_jd0f8"]
[ext_resource type="Texture2D" uid="uid://xewexd2rap2s" path="res://parallaxes/Ocean_1/2.png" id="5_hyk5i"]
[ext_resource type="Texture2D" uid="uid://s2v1bt8tw10b" path="res://parallaxes/Ocean_1/3.png" id="6_5pgc0"]
[ext_resource type="PackedScene" uid="uid://dqk2pedcucgnw" path="res://characters/player/player.tscn" id="6_ahra0"]
[ext_resource type="PackedScene" uid="uid://cfqdgrh4lw7pi" path="res://game_objects/switch_blocks/block_sequence.tscn" id="7_v4u45"]
[ext_resource type="PackedScene" uid="uid://bxun5w5sv6twu" path="res://game_objects/walls/wall.tscn" id="9_w7oqa"]

[sub_resource type="Curve" id="Curve_1888p"]
_data = [Vector2(0, 0), 0.0, 1.0, 0, 1, Vector2(1, 1), 1.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_q2det"]
_data = [Vector2(0, 0), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="World" type="Node2D"]
script = ExtResource("1_u7smd")
ambient_note_player_scene = ExtResource("2_573sm")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -50

[node name="ParallaxBackground" type="ParallaxBackground" parent="CanvasLayer"]
offset = Vector2(0, -50)
scale = Vector2(2.3, 2.3)
transform = Transform2D(2.3, 0, 0, 2.3, 0, -50)
scroll_ignore_camera_zoom = true

[node name="ParallaxLayer" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2(0.02, 0.02)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
texture_filter = 3
texture = ExtResource("3_ntxxk")
centered = false
region_rect = Rect2(2306, 4, 1095, 613)

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer"]
texture_filter = 3
texture = ExtResource("3_ntxxk")
centered = false
offset = Vector2(-576, 0)
region_rect = Rect2(2306, 4, 1095, 613)

[node name="ParallaxLayer2" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2(0.04, 0.02)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer2"]
texture_filter = 3
texture = ExtResource("5_hyk5i")
centered = false
region_rect = Rect2(2306, 4, 1095, 613)

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer2"]
texture_filter = 3
texture = ExtResource("5_hyk5i")
centered = false
offset = Vector2(-576, 0)
region_rect = Rect2(2306, 4, 1095, 613)

[node name="ParallaxLayer3" type="ParallaxLayer" parent="CanvasLayer/ParallaxBackground"]
motion_scale = Vector2(0.08, 0.02)
motion_mirroring = Vector2(1152, 0)

[node name="Sprite2D" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer3"]
texture_filter = 3
texture = ExtResource("6_5pgc0")
centered = false
region_rect = Rect2(2306, 4, 1095, 613)

[node name="Sprite2D2" type="Sprite2D" parent="CanvasLayer/ParallaxBackground/ParallaxLayer3"]
texture_filter = 3
texture = ExtResource("6_5pgc0")
centered = false
offset = Vector2(-576, 0)
region_rect = Rect2(2306, 4, 1095, 613)

[node name="Player" parent="." instance=ExtResource("6_ahra0")]
unique_name_in_owner = true

[node name="Overview" type="Polygon2D" parent="."]
unique_name_in_owner = true
visible = false
color = Color(0, 0, 0, 0)
polygon = PackedVector2Array(0, 624, 1152, 624, 1152, -816, 0, -816)

[node name="CameraCenter" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(576, 312)

[node name="Camera" type="Camera2D" parent="."]
unique_name_in_owner = true
position_smoothing_speed = 4.0
drag_left_margin = 0.05
drag_top_margin = 0.05
drag_right_margin = 0.05
drag_bottom_margin = 0.05
script = ExtResource("4_jd0f8")
target_node_path = NodePath("../CameraCenter")
move_speed = 1.4
position_easing = SubResource("Curve_1888p")
target_zoom = Vector2(0.25, 0.25)
zoom_easing = SubResource("Curve_q2det")

[node name="Environment" type="Node2D" parent="."]

[node name="Walls" type="Node2D" parent="Environment"]

[node name="Floor" parent="Environment/Walls" instance=ExtResource("9_w7oqa")]
position = Vector2(576, 648)

[node name="LeftWall" parent="Environment/Walls" instance=ExtResource("9_w7oqa")]
position = Vector2(0, 288)
rotation = 1.5708

[node name="RightWall" parent="Environment/Walls" instance=ExtResource("9_w7oqa")]
position = Vector2(1152, 288)
rotation = -1.5708

[node name="Stages" type="Node2D" parent="Environment"]

[node name="GameObjects" type="Node2D" parent="."]

[node name="BlockSequence" parent="GameObjects" instance=ExtResource("7_v4u45")]
unique_name_in_owner = true

[connection signal="current_octave_changed" from="Player" to="." method="_on_player_current_octave_changed"]
[connection signal="current_tone_changed" from="Player" to="." method="_on_player_current_tone_changed"]
[connection signal="on_floor_changed" from="Player" to="." method="_on_player_on_floor_changed"]
[connection signal="finished" from="GameObjects/BlockSequence" to="." method="_on_block_sequence_finished"]
[connection signal="sequence_finished" from="GameObjects/BlockSequence" to="." method="_on_block_sequence_sequence_finished"]
[connection signal="sequence_played" from="GameObjects/BlockSequence" to="." method="_on_block_sequence_sequence_played"]
